# Rust-LCE

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: AUDIO_PARITY_BANKS.md  PARITY_MATRIX.md  PORT_PLAN_V2.md  PROGRESS_TRACKER.md
src/: lib.rs  main.rs
src/client/: mod.rs  (+13 more)
tests/: block_chunk_view_integration.rs  block_persistence_integration.rs  bootstrap_sequence_integration.rs  client_asset_pipeline_integration.rs  client_chunk_streaming_integration.rs  client_clouds_integration.rs  client_crafting_ui_integration.rs  client_creative_ui_integration.rs  client_gameplay_ui_integration.rs  client_hotbar_ui_integration.rs  client_interaction_integration.rs  client_inventory_ui_integration.rs  client_lifecycle_hooks_integration.rs  client_particles_integration.rs  client_world_worker_integration.rs  combat_lifecycle_integration.rs  crafting_item_use_integration.rs  entities_mobs_integration.rs  fluids_lifecycle_integration.rs  inventory_hotbar_integration.rs  nbt_integration.rs  offline_gameplay_smoke_integration.rs  offline_world_bootstrap_integration.rs  player_collision_integration.rs  player_fluid_physics_integration.rs  redstone_lifecycle_integration.rs  region_file_integration.rs  runtime_loop_integration.rs  spawn_movement_integration.rs  terrain_meshing_integration.rs  world_lifecycle_integration.rs  world_save_roundtrip_integration.rs  worldgen_biome_cache_integration.rs  worldgen_chunk_fallback_integration.rs  worldgen_decorator_integration.rs  worldgen_end_decorator_integration.rs  worldgen_noise_integration.rs  worldgen_reference_fixture_integration.rs
(+23 files in other folders)
